Updating some form styles and fixing some extra padding for global danger

--- a/assets/less/pages/homepage.less
+++ b/assets/less/pages/homepage.less
@@ -1,7 +1,7 @@
 #pullEmIn {
 
     #lead {
-        font-size: 2.4em;
+        font-size: 2.8em;
     }
 
     form > p {
