--- a/assets/less/patchnotes.less
+++ b/assets/less/patchnotes.less
@@ -45,3 +45,6 @@ footer {
     }
 }
 
+.form-control {
+    border: 1px solid @gray-light;
+}
