--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -466,9 +466,9 @@
 
 @jumbotron-padding:              30px;
 @jumbotron-color:                inherit;
-@jumbotron-bg:                   darken(@body-bg, 3%);
+@jumbotron-bg:                   darken(@body-bg, 12%);
 @jumbotron-heading-color:        inherit;
-@jumbotron-font-size:            ceil((@font-size-base * 1.5));
+@jumbotron-font-size:            ceil((@font-size-base * 1.2));
 
 
 //== Form states and alerts
